--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -182,12 +182,12 @@ base-demo-to-live:
     - eval $(ssh-agent -s)
 
     # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-    - ssh-add <(echo "$DEPLOY_KEY_CLIENT_DEMO")
+    - ssh-add <(echo "$DEPLOY_KEY_PRODUCTION_CLOUD4")
 
     # Add the fingerprint for the host to known hosts so we can verify it.
     # To determine the fingerprint of a host, use `ssh-keyscan -H`.
     - mkdir -p ~/.ssh
-    - echo "$PRODUCTION_FINGERPRINT" >> ~/.ssh/known_hosts
+    - echo "$PRODUCTION_FINGERPRINT_CLOUD4" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
     - rsync -av --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demo/
@@ -217,12 +217,12 @@ plus-demo-to-live:
     - eval $(ssh-agent -s)
 
     # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-    - ssh-add <(echo "$DEPLOY_KEY_CLIENT_DEMO")
+    - ssh-add <(echo "$DEPLOY_KEY_PRODUCTION_CLOUD4")
 
     # Add the fingerprint for the host to known hosts so we can verify it.
     # To determine the fingerprint of a host, use `ssh-keyscan -H`.
     - mkdir -p ~/.ssh
-    - echo "$PRODUCTION_FINGERPRINT" >> ~/.ssh/known_hosts
+    - echo "$PRODUCTION_FINGERPRINT_CLOUD4" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
     - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ drupalcommerce@cloud4.acromedia.com:/home/drupalcommerce/www/demoplus/
@@ -263,12 +263,12 @@ plus-demo-to-live-AWS:
     - eval $(ssh-agent -s)
 
     # Add the SSH key stored in SSH_PRIVATE_KEY variable to the agent store
-    - ssh-add <(echo "$DEPLOY_KEY_PRODUCTION")
+    - ssh-add <(echo "$DEPLOY_KEY_PRODUCTION_AWS")
 
     # Add the fingerprint for the host to known hosts so we can verify it.
     # To determine the fingerprint of a host, use `ssh-keyscan -H`.
     - mkdir -p ~/.ssh
-    - echo "$PRODUCTION_FINGERPRINT" >> ~/.ssh/known_hosts
+    - echo "$PRODUCTION_FINGERPRINT_AWS" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
     - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acromedia@commerceplus-new.acromedia.com:/home/acromedia/www/commerceplus/
