Add private dir to gitignore and gitlabci-rsync-exclude

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 
 # Ignore Drupal's file directory
 /web/sites/*/files/
+private/
 
 # Ignore SimpleTest multi-site environment.
 /web/sites/simpletest/
