Update composer.json/lock with latest core security update

--- a/composer.json
+++ b/composer.json
@@ -175,7 +175,9 @@
             },
             "drupal/core": {
                 "#2771837: drupalimage CKEditor plugin should not require data-entity-uuid and data-entity-type when image upload is disabled":
-                "https://www.drupal.org/files/issues/2018-09-13/drupalimage_ckeditor-2771837-34.patch"
+                "https://www.drupal.org/files/issues/2018-09-13/drupalimage_ckeditor-2771837-34.patch",
+                "#2802803: Temporary files whose files are missing on the disk result in never-ending error log messages":
+                "https://www.drupal.org/files/issues/2018-06-27/missing-temp-files-stuck-in-table-2802803-33.patch"
             }
         }
     }
