--- a/composer.json
+++ b/composer.json
@@ -49,7 +49,7 @@
         "drupal/field_group": "~1.0-rc6",
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_authnet": "^1.0",
-        "drupal/commerce_shipping": "~2.0-beta3",
+        "drupal/commerce_shipping": "2.x-dev",
         "drupal/commerce_recurring": "^1.0@beta",
         "drupal/advancedqueue": "^1.0@beta",
         "drupal/search_api": "^1.0",
