Update gitlab-ci.yml for new AWS server deploy

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -253,8 +253,8 @@ plus-demo-to-live-AWS:
     - performance_update
 
   environment:
-    name: commerceplus-new.acromedia.com
-    url: https://commerceplus-new.acromedia.com
+    name: commerceplus-front.acromedia.com
+    url: https://commerceplus-front.acromedia.com
 
   script:
     # Install ssh-agent if not already installed, it is required by Docker
@@ -272,19 +272,8 @@ plus-demo-to-live-AWS:
     - echo "$PRODUCTION_FINGERPRINT_AWS" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
-    - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acromedia@commerceplus-new.acromedia.com:/home/acromedia/www/commerceplus/
+    - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acro@commerceplus-front.acromedia.com:/home/acro/www/cpback/
 
     # log into the site, reset settings.php permissions and run scripts.
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
-    - ssh acromedia@commerceplus-new.acromedia.com 'chown acromedia:acromedia-commerceplus-srv /home/acromedia/www/commerceplus/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live-AWS.sh
-
-plus-demo-live-post:
-  image: smmccabe/docker-loadtest
-  stage: post
-  dependencies:
-    - plus-demo-to-live-AWS
-  script:
-    # Run first at a higher threshold to allow for cache generation, if it takes longer than this
-    # thats a problem, an uncached page should take > 10 seconds
-    - loadtimer commerceplus-new.acromedia.com 20000
-    - loadtimer commerceplus-new.acromedia.com 5000
+    - ssh acro@commerceplus-front.acromedia.com 'chown acro:acro-cpback-srv /home/acro/www/cpback/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live-AWS.sh
