--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,6 +86,8 @@ build:
     # Compile Sass from theme using npm defined in our package.
     - cd web/themes/custom/commerce_2_demo
     - npm install
+    # Install natives separately to fix "ReferenceError: internalBinding is not define" as per https://github.com/nodejs/node/issues/25132.
+    - npm install natives@1.1.6
     - ./node_modules/gulp/bin/gulp.js sass
     # Remove the node_modules dir generated from npm install.
     - rm -rf node_modules
