--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -234,17 +234,6 @@ plus-demo-to-live:
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
     - ssh drupalcommerce@cloud4.acromedia.com 'chown drupalcommerce:drupalcommerce-demoplus-srv /home/drupalcommerce/www/demoplus/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live.sh
 
-plus-demo-live-post:
-  image: smmccabe/docker-loadtest
-  stage: post
-  dependencies:
-    - plus-demo-to-live
-  script:
-    # Run first at a higher threshold to allow for cache generation, if it takes longer than this
-    # thats a problem, an uncached page should take > 10 seconds
-    - loadtimer commerceplus.acromedia.com 20000
-    - loadtimer commerceplus.acromedia.com 5000
-
 # Deploy plus demo to LIVE site (AWS).
 plus-demo-to-live-AWS:
   stage: deploy
@@ -255,7 +244,7 @@ plus-demo-to-live-AWS:
     - performance_update
 
   environment:
-    name: commerceplus-front.acromedia.com
+    name: commerceplus-new.acromedia.com
     url: https://commerceplus-front.acromedia.com
 
   script:
@@ -274,8 +263,19 @@ plus-demo-to-live-AWS:
     - echo "$PRODUCTION_FINGERPRINT_AWS" >> ~/.ssh/known_hosts
 
     # Install composer and move updated files up to deployment server, exclude .git since it's not needed
-    - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acro@commerceplus-front.acromedia.com:/home/acro/www/cpback/
+    - rsync -avq --no-perms --no-owner --no-group --exclude-from '.gitlabci-rsync-exclude.txt' --exclude '.git' --delete ./ acro@commerceplus-new.acromedia.com:/home/acro/www/cpback/
 
     # log into the site, reset settings.php permissions and run scripts.
     # IMPORTANT: Drupal 8.4 and Drush need PHP 7.1 but server defaults to 7.0. Need script to check PHP version and use the right one.
     - ssh acro@commerceplus-new.acromedia.com 'chown acro:acro-cpback-srv /home/acro/www/cpback/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live-AWS.sh
+
+plus-demo-live-post:
+  image: smmccabe/docker-loadtest
+  stage: post
+  dependencies:
+    - plus-demo-to-live
+  script:
+    # Run first at a higher threshold to allow for cache generation, if it takes longer than this
+    # thats a problem, an uncached page should take > 10 seconds
+    - loadtimer commerceplus.acromedia.com 20000
+    - loadtimer commerceplus.acromedia.com 5000
