Update gulp and packages to latest version

--- a/web/themes/custom/commerce_2_demo/package.json
+++ b/web/themes/custom/commerce_2_demo/package.json
@@ -5,20 +5,17 @@
   "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build-sass": "gulp sass"
+    "gulp": "gulp"
   },
   "author": "Acro Media Inc.",
   "license": "ISC",
   "devDependencies": {
-    "autoprefixer": "^9.3.1",
-    "gulp": "^3.9.1",
+    "autoprefixer": "^9.4.7",
+    "gulp": "^4.0.0",
     "gulp-postcss": "^8.0.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.4",
-    "postcss-easysprites": "^0.1.9"
-  },
-  "dependencies": {
-    "graceful-fs": "^4.1.15"
+    "gulp-watch": "^5.0.1"
   }
 }
