--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -232,12 +232,12 @@ plus-demo-to-live:
     - ssh drupalcommerce@cloud4.acromedia.com 'chown drupalcommerce:drupalcommerce-demoplus-srv /home/drupalcommerce/www/demoplus/web/sites/default/settings.php && /bin/bash -u -e -s' < ./scripts/remote-drush-commands_plus-live.sh
 
 plus-demo-live-post:
-  image: smmccabe/docker-loadtest
+  image: smmccabe/docker
   stage: post
   dependencies:
     - plus-demo-to-live
   script:
-    # Run first at a higher threshold to allow for cache generation, if it takes longer than this
-    # thats a problem, an uncached page should take > 10 seconds
-    - loadtimer commerceplus.acromedia.com 20000
-    - loadtimer commerceplus.acromedia.com 5000
+    # test initial page load
+    - commercebot --headless --url https://commerceplus.acromedia.com --timer-only 5000
+    # test flows as well
+    - commercebot --headless --url https://commerceplus.acromedia.com
