--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
         "jqueryprint": {
             "type": "package",
             "package": {
-                "name": "doersguild/jquery.print",
+                "name": "DoersGuild/jQuery.print",
                 "version": "master",
                 "type": "drupal-library",
                 "source": {
-                    "url": "https://github.com/doersguild/jquery.print.git",
+                    "url": "https://github.com/DoersGuild/jQuery.print.git",
                     "type": "git",
                     "reference": "origin/master"
                 }
@@ -37,7 +37,7 @@
         "composer/installers": "^1.2",
         "drupal-composer/drupal-scaffold": "^2.2",
         "cweagans/composer-patches": "~1.0",
-        "drupal/core": "^8.6.13",
+        "drupal/core": "^8.7.0",
         "drupal/console": "~1.0",
         "drupal/commerce": "^2.9",
         "drupal/swiftmailer": "1.x-dev",
@@ -77,8 +77,7 @@
         "drupal/asset_injector": "^2.2",
         "doersguild/jquery.print": "master",
         "drupal/commerce_pado": "^1.0@beta",
-        "drupal/jsonapi": "1.x-dev",
-        "drupal/jsonapi_extras": "^2.8",
+        "drupal/jsonapi_extras": "^3.6",
         "drupal/matomo": "^1.7",
         "drupal/mautic": "^1.1",
         "drupal/image_effects": "^2.1",
@@ -154,10 +153,6 @@
                 "#2770731: Add a display name to promotions":
                 "https://www.drupal.org/files/issues/2019-04-15/adjustment-label-update-2770731-51.patch"
             },
-            "drupal/commerce_pado": {
-                "#2992041: Group add on items under generic variable":
-                "https://www.drupal.org/files/issues/2018-08-29/group_add_on_items_under_generic_variable-2992041-8.patch"
-            },
             "drupal/commerce_shipping": {
                 "#2952457: Removing user's profile causes fatal error with PackerManager::packToShipments()":
                 "https://www.drupal.org/files/issues/2019-02-06/2952457-23.SHOULD-FAIL.patch"
@@ -172,9 +167,7 @@
             },
             "drupal/core": {
                 "#2771837: drupalimage CKEditor plugin should not require data-entity-uuid and data-entity-type when image upload is disabled":
-                "https://www.drupal.org/files/issues/2018-09-13/drupalimage_ckeditor-2771837-34.patch",
-                "#2802803: Temporary files whose files are missing on the disk result in never-ending error log messages":
-                "https://www.drupal.org/files/issues/2019-03-27/2802803-57.patch"
+                "https://www.drupal.org/files/issues/2018-09-13/drupalimage_ckeditor-2771837-34.patch"
             }
         }
     }
