Add google_tag, commerce_google_tag_manager, and google_analytics_reports modules

--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,7 @@
         "drupal/comments_order": "^1.0@beta",
         "drupal/commerce": "^2.9",
         "drupal/commerce_authnet": "^1.0",
+        "drupal/commerce_google_tag_manager": "^1.0@alpha",
         "drupal/commerce_pado": "^1.0@beta",
         "drupal/commerce_paypal": "~1.0",
         "drupal/commerce_pos": "^2.0",
@@ -61,6 +62,8 @@
         "drupal/facets_pretty_paths": "^1.0-alpha1",
         "drupal/field_group": "^3.0",
         "drupal/google_analytics": "^2",
+        "drupal/google_analytics_reports": "^3.0@beta",
+        "drupal/google_tag": "^1.1",
         "drupal/honeypot": "^1",
         "drupal/hotjar": "^1.2",
         "drupal/image_effects": "^2.1",
