--- a/composer.json
+++ b/composer.json
@@ -48,6 +48,7 @@
         "drupal/comments_order": "^1.0@beta",
         "drupal/commerce": "^2.9",
         "drupal/commerce_authnet": "^1.0",
+        "drupal/commerce_fraud": "^2.0@beta",
         "drupal/commerce_google_tag_manager": "^1.0@alpha",
         "drupal/commerce_pado": "^1.0@beta",
         "drupal/commerce_paypal": "~1.0",
@@ -57,7 +58,7 @@
         "drupal/config_inspector": "1.x-dev",
         "drupal/console": "^1.0.2",
         "drupal/contribute": "^1.0",
-        "drupal/core": "^8.7.0",
+        "drupal/core": "^8.9.0",
         "drupal/entity": "^1.0",
         "drupal/facets": "^1.0-beta1",
         "drupal/facets_pretty_paths": "^1.0-alpha1",
@@ -72,7 +73,7 @@
         "drupal/magnific_popup": "^1.3",
         "drupal/matomo": "^1.7",
         "drupal/mautic": "^1.1",
-        "drupal/menu_block": "^1.4",
+        "drupal/menu_block": "^1.6",
         "drupal/metatag": "^1",
         "drupal/paragraphs": "^1.1",
         "drupal/pathauto": "^1",
@@ -83,6 +84,7 @@
         "drupal/search_api_page": "^1.0-alpha11",
         "drupal/search_api_solr": "^3.7",
         "drupal/simple_gmap": "^1.3",
+        "drupal/stage_file_proxy": "^1.1",
         "drupal/swiftmailer": "1.x-dev",
         "drupal/taxonomy_menu": "^3",
         "drupal/taxonomy_term_depth": "2.x-dev",
@@ -100,14 +102,6 @@
         "zaporylie/composer-drupal-optimizations": "^1.0"
     },
     "require-dev": {
-        "behat/mink": "~1.7",
-        "behat/mink-goutte-driver": "~1.2",
-        "drupal/devel": "^2",
-        "jcalderonzumba/gastonjs": "~1.0.2",
-        "jcalderonzumba/mink-phantomjs-driver": "~0.3.1",
-        "mikey179/vfsstream": "~1.2",
-        "phpunit/phpunit": "~4.8",
-        "symfony/css-selector": "^3.4",
         "webflo/drupal-core-require-dev": "^8.7.0"
     },
     "conflict": {
@@ -176,10 +170,6 @@
             }
         },
         "patches": {
-            "drupal/commerce": {
-                "#2770731: Add a display name to promotions":
-                "https://www.drupal.org/files/issues/2019-04-15/adjustment-label-update-2770731-51.patch"
-            },
             "drupal/commerce_pado": {
                 "#2992041: Group add on items under generic variable":
                 "https://www.drupal.org/files/issues/2018-08-29/group_add_on_items_under_generic_variable-2992041-8.patch"
@@ -187,10 +177,6 @@
             "drupal/commerce_pos": {
                 "Custom styling POS product searching":
                 "patches/commerce_pos-custom-styling_uh.patch"
-            },
-            "drupal/menu_block": {
-                "#2809699: Menu parent as block title":
-                "https://www.drupal.org/files/issues/2018-05-07/menu_block-label_configuration-2809699-77.patch"
             },
             "drupal/core": {
                 "#2771837: drupalimage CKEditor plugin should not require data-entity-uuid and data-entity-type when image upload is disabled":
