Update phpcs command to use local phpcs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,21 +17,7 @@ code_standards:
   script:
     # runs the Drupal code standards checks on our custom code
     # the Drupal Code Standards come from the Coder module, which is automatically part of the base testing image
-    - phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,info,txt,md --file-list=.phpcs-files --ignore=*.css
-
-phpmd:
-  stage: test
-  script:
-    - phpcs --standard=DrupalPractice --extensions=php,module,inc,install,test,profile,theme,info,txt,md --file-list=.phpcs-files --ignore=*.css || true
-
-    - phpmd web/modules/custom text cleancode || true
-    - phpmd web/modules/custom text codesize || true
-    - phpmd web/modules/custom text controversial || true
-    - phpmd web/modules/custom text design || true
-    - phpmd web/modules/custom text naming || true
-    - phpmd web/modules/custom text unusedcode || true
-
-    - phpcpd web/modules/custom || true
+    - ./bin/phpcs --standard=Drupal -n --extensions=php,module,inc,install,test,profile,theme,info,txt,md --file-list=.phpcs-files --ignore=*.css
 
 debt:
   stage: test
