--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "cboden/ratchet": "^0.4.1",
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6.5",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "doctrine/cache": "~1.6.2",
         "doctrine/collections": "~1.4.0",
         "doctrine/common": "~2.7.3",
