--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
         "drupal/better_exposed_filters": "^3.0@alpha",
         "drupal/big_pipe_sessionless": "^1.2",
         "drupal/block_exclude_pages": "^1.3",
+        "drupal/coder": "^8.3",
         "drupal/color_field": "^2.0-rc2",
         "drupal/comments_order": "^1.0@beta",
         "drupal/commerce": "^2.9",
