--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -268,6 +268,10 @@ plus-demo-to-live-AWS:
 plus-demo-live-post:
   image: smmccabe/docker
   stage: post
+  only:
+    - UAT
+    - master
+    - performance_update
   dependencies:
     - plus-demo-to-live
   script:
